--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
             <img src="1.jpg" alt="HookLab Logo" class="w-40 h-40 md:w-48 md:h-48 mx-auto mb-4 rounded-full shadow-lg object-cover" onerror="this.onerror=null;this.src='https://placehold.co/192x192/FF6B6B/FFFFFF?text=HookLab';">
             <h1 class="text-5xl md:text-7xl font-pacifico text-[#073B4C]">HookLab</h1>
             <p class="text-md text-slate-500 mt-2">Your Personal Studio for Crafting the Perfect Hook</p>
-            <p class="text-md text-slate-500 italic mt-2">Devised by Panagiotis Domvros, English and Drama Teacher</p>
+            <p class="text-md text-slate-600 max-w-xl mx-auto mt-4">Master the art of persuasion by grabbing your reader's attention from the very first sentence. This app helps you practice choosing the perfect opening line for any situation.</p>
+            <p class="text-md text-slate-500 italic mt-4">Devised by Panagiotis Domvros, English and Drama Teacher</p>
         </header>
 
         <!-- Navigation -->
@@ -148,8 +149,8 @@
                             <h2 class="text-2xl font-bold text-[#073B4C] mb-4">The 6 Pillars of Persuasion</h2>
                             <p class="text-slate-600 mb-4">The 30 attention-grabbing sentences analyzed here are evenly distributed across six distinct psychological categories. Each category represents a different strategy for capturing a reader's interest, from creating urgency to sparking curiosity.</p>
                             <div class="text-center mt-6">
-                                <span class="text-7xl font-bold text-[#118AB2]"> </span>
-                                <span class="block text-xl text-slate-500"> </span>
+                                <span class="text-7xl font-bold text-[#118AB2]">30</span>
+                                <span class="block text-xl text-slate-500">Total Sentences Analyzed</span>
                             </div>
                         </div>
                         <div>
